# ManualEVShiftSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
imgui_backends/: imgui.ini
include/: clutch.hpp  engine.hpp
output/: clutch_engine_test_results.csv
src/: clutch.cpp  engine.cpp
